Java 21: fix deprecation warnings caused by Java update (#2922)
See #2890